added react dependencies

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>webpack 2 skeleton</title>
   </head>
   <body>
-    <script src="dist/bundle.js"></script>
+    <div class="container"></div>
   </body>
+  <script src="dist/bundle.js"></script>
 </html>
