--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>webpack 2 React skeleton</title>
+    <title>webpack React skeleton</title>
   </head>
   <body>
     <div class="container"></div>
